monitoring/11-grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  type: NodePort
  ports:
    - port: 9091
      targetPort: 3000
  selector:
    app: grafana
